--- a/TodoApi/Dockerfile
+++ b/TodoApi/Dockerfile
@@ -12,7 +12,7 @@ USER appuser
 FROM mcr.microsoft.com/dotnet/sdk:3.1-focal AS build
 WORKDIR /src
 COPY ["TodoApi.csproj", ""]
-RUN dotnet restore "TodoApi/TodoApi.csproj"
+RUN dotnet restore "TodoApi.csproj"
 COPY . .
 
 RUN dotnet build "TodoApi.csproj" -c Release -o /app/build
